# wayport

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  DEVELOPMENT.md  IMPLEMENTATION_PLAN.md  LICENSE  Makefile  NEXT_STEPS.md  README.md  SECURITY.md  index.html  package-lock.json  package.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
cli/: Cargo.toml
cli/src/: main.rs  output.rs
cli/src/commands/: connect.rs  disconnect.rs  export.rs  group.rs  history.rs  import_cmd.rs  import_ssh.rs  kill.rs  logs.rs  ls.rs  mod.rs  scan.rs  status.rs
crates/porthole-core/: Cargo.toml
crates/porthole-core/src/: auth.rs  config.rs  database.rs  history.rs  port_utils.rs  ssh_config.rs  tunnel_manager.rs  types.rs
crates/wayport-core/: Cargo.toml
crates/wayport-core/src/: auth.rs  config.rs  config_file.rs  database.rs  history.rs  lib.rs  pid.rs  ssh_config.rs  tunnel_manager.rs  types.rs
desktop/: eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts
desktop/src/: App.tsx  index.css  main.tsx  vite-env.d.ts
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: commands.rs  database.rs  lib.rs  port_utils.rs  store.rs  tunnel_manager.rs  types.rs
desktop/src/components/: AuthGate.tsx  CommandPalette.tsx  ConnectionDetail.tsx  ConnectionForm.tsx  ConnectionItem.tsx  Drawer.tsx  EmptyState.tsx  EnvironmentEditor.tsx  EnvironmentSwitcher.tsx  FolderTree.tsx  HistoryPanel.tsx  LoginForm.tsx  PortUtilities.tsx  SSHKeyManager.tsx  SettingsPanel.tsx  Sidebar.tsx  StatusBar.tsx  TunnelDashboard.tsx  TunnelGroupPanel.tsx
desktop/src/lib/: api.ts  auth.ts  supabase.ts  sync.ts  types.ts  variables.ts
desktop/src/stores/: authStore.ts  environmentStore.ts  folderStore.ts  historyStore.ts  profileStore.ts  (+1 more)
docs/: ARCHITECTURE.md  DEVELOPMENT.md  UX_REDESIGN.md
infra/: README.md  build.mjs  cdk.json  package.json  stack.ts  tsconfig.json
infra/lambda/: sync-delete.ts  sync-pull.ts  sync-push.ts  types.ts
infra/terraform/: .gitignore  main.tf  outputs.tf  variables.tf
landing/: next.config.ts  package-lock.json  package.json
landing/app/: globals.css  layout.tsx  opengraph-image.tsx  page.tsx  twitter-image.tsx
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: commands.rs  lib.rs  store.rs  tunnel_manager.rs  types.rs
src/components/: AuthGate.tsx  ConnectionDetail.tsx  ConnectionForm.tsx  ConnectionItem.tsx  EmptyState.tsx  EnvironmentSwitcher.tsx  PortUtilities.tsx  Sidebar.tsx  StatusBar.tsx
src/lib/: api.ts  types.ts  variables.ts
src/stores/: authStore.ts  historyStore.ts  profileStore.ts
(+14 files in other folders)
