[package]
name = "porthole-cli"
version = "0.1.0"
edition = "2021"
description = "CLI for Porthole SSH tunnel manager"

[[bin]]
name = "porthole"
path = "src/main.rs"

[dependencies]
porthole-core = { path = "../crates/porthole-core" }
clap = { version = "4", features = ["derive"] }
comfy-table = "7"
colored = "2"
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.6", features = ["v4"] }
libc = "0.2"
