[package]
name = "wayport-cli"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "CLI for Wayport SSH tunnel manager"

[[bin]]
name = "wayport"
path = "src/main.rs"

[dependencies]
wayport-core = { path = "../crates/wayport-core" }
clap = { version = "4", features = ["derive"] }
comfy-table = "7"
colored = "2"
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.6", features = ["v4"] }
libc = "0.2"
