[package]
name = "app"
version = "0.1.0"
description = "Wayport — SSH port-forwarding tunnel manager"
authors = ["Shyam Sundar <yesweeyes.dev@gmail.com>"]
license = "MIT"
repository = "https://github.com/shyax/wayport"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
wayport-core = { path = "../../crates/wayport-core" }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.3", features = ["specta", "tray-icon"] }
tauri-plugin-log = "2"
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1.35", features = ["full"] }
parking_lot = "0.12"
dirs = "5.0"
rusqlite = { version = "0.31", features = ["bundled"] }
tauri-plugin-dialog = "2.6.0"
tauri-plugin-single-instance = "2.4.0"
tauri-plugin-autostart = "2"
tauri-plugin-notification = "2"

